--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,20 +9,39 @@ user.validation-message.phone-number=Invalid phone number
 
 field.validation-message.label-blank=Label must be not blank
 field.validation-message.label-single-line=Label must be single line
-field.validation-message.label-size=Label '${validValue}' length is out of the interval [{min}, {max}]
+field.validation-message.label-size=Label '${validatedValue}' length is out of the interval [{min}, {max}]
 field.validation-message.type-not-empty=Type is required
-field.validation-message.required-not-empty='IsRequired' is required
-field.validation-message.active-not-empty='IsActive' is required
+field.validation-message.required-not-empty=IsRequired is required
+field.validation-message.active-not-empty=IsActive is required
 field.validation-message.options-not-empty=Options are required
 
 response.validation-message.responses-not-empty=Responses are required
 
+questionnaire.validation-message.name-blank=Name must be not blank
+questionnaire.validation-message.name-size=Name '${validatedValue}' length is out of the interval [{min}, {max}]
+questionnaire.validation-message.description-blank=Description must be not blank
+questionnaire.validation-message.description-size=Description '${validatedValue}' length is out of the interval [{min}, {max}]
+
+field.exception.questionnaire-not-found=Questionnaire(id={0}) not found
 field.exception.not-found=Field(id={0}) not found
+field.exception.common=Error occurred with field(s)
+
 questionnaire.exception.user-not-found=No questionnaire found for user(id={0})
 questionnaire.exception.no-active-fields=Questionnaire for Users(id={0}) has no active fields
-response.exception.user-not-found=User(id={0}) has no  questionnaire
+questionnaire.exception.common=Error occurred with questionnaire(s)
+questionnaire.exception.not-found=Questionnaire (id={0}) not found
+
+response.exception.not-found=Response(id={0}) no found
+response.exception.questionnaire-not-found=Questionnaire(id={0}) not found
 response.exception.required-not-provided=Field(id={0}) required, but not provided
 response.exception.invalid-field-response=Can not response to Field(id={0}) (Probably field not active or not exists)
 response.exception.empty=Response is empty
+response.exception.common=Error occurred with response(s)
 
 user.exception.user-not-found=User(email={0}) not found
+user.exception.email-already-in-use=Email (email={0}) already in use
+user.exception.common=Error occurred with user(s)
+
+auth.exception.credentials=Invalid email/password provided
+
+service.exception.common=Unexpected error on service layer
